src/objects/JiraStatusCodeMapping__mdt.object
<CustomObject>
        <fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssueType__c</fullName>
        <label>IssueType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Jira Status</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isStatusForCompletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isStatusForCompletion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStatusForEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isStatusForEmail?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStatusForProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isStatusForProgress?</label>
        <type>Checkbox</type>
    </fields>
    <label>JiraStatusCodeMapping</label>
    <pluralLabel>JiraStatusCodeMappings</pluralLabel>
    <validationRules>
        <fullName>Checkbox_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( isStatusForCompletion__c = false,   isStatusForEmail__c  = false, isStatusForProgress__c  = false)</errorConditionFormula>
        <errorMessage>Atleast one checkbox must be checked to create the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Template_Name_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(isStatusForEmail__c = true , OR(ISBLANK( Email_Template_Name__c ), ISBLANK( Status__c )))</errorConditionFormula>
        <errorMessage>Email Template Name and status can not be left blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(  isStatusForCompletion__c = true,  isStatusForProgress__c = true) ,ISBLANK( Status__c ))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status cannot be left blank.</errorMessage>
    </validationRules>
</CustomObject>